--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,25 @@
-.App {
-    height: 100%;
+/* .App {   
+    display: grid;
+    grid-template-areas: 
+    "main" "footer";
+    grid-template-rows: 1fr 3fr 1fr ;
+    
 }
+
+nav{
+    grid-area: nav;
+    background-color: orange;
+}
+main{
+    margin-top: 60px;
+    grid-area: main;
+    background-color: blueviolet;
+    
+}
+footer{
+    grid-area: footer;
+    background-color: blue;
+} */
+
  
   
